# hpc-roadmap

./: .gitignore  README.md
00_openmp_cuda_mpi/01_distributed_kmeans/include/models/: dataset.h
00_openmp_cuda_mpi/01_distributed_kmeans/src/: io_utils.cpp  kmeans.cpp
00_openmp_cuda_mpi/02_heat_diffusion/: CMakeLists.txt
00_openmp_cuda_mpi/02_heat_diffusion/docs/architecture/: architecture.md
00_openmp_cuda_mpi/02_heat_diffusion/docs/roadmap/: phase1.md  phase2.md  phase3.md  roadmap.md
00_openmp_cuda_mpi/02_heat_diffusion/docs/study/analysis/: cuda_optimization.md  hpc_comparison.md  hybrid_optimization.md
00_openmp_cuda_mpi/02_heat_diffusion/docs/study/solvers/: mpi_blocking.md
00_openmp_cuda_mpi/02_heat_diffusion/include/: config.h  profiler.h  solver_cuda.cuh  solver_seq.h
00_openmp_cuda_mpi/02_heat_diffusion/scripts/: run_benchmarks.sh
00_openmp_cuda_mpi/02_heat_diffusion/src/: grid.cc  solver_cuda.cu  solver_mpi_blocking.cc  solver_mpi_utils.cc  solver_seq.cc
00_university/01_OpenMP/: CMakeLists.txt  README.md
00_university/01_OpenMP/docs/: approach_comparison.md  design_justification_es.md
00_university/01_OpenMP/include/: kmeans.h  stats.h
00_university/01_OpenMP/src/: kmeans.cpp  main.cpp
00_university/01_OpenMP/tools/: file_generator.cpp
00_university/02_CUDA/: .perf_7McMwR  CMakeLists.txt  README.md  gpu_test  gpu_test.cu
00_university/02_CUDA/docs/: requirements.md
00_university/02_CUDA/docs/roadmap/: phase4.md  phase5.md
00_university/02_CUDA/docs/solvers/: index.md  openmp.md
00_university/02_CUDA/docs/study/analysis/: openmp_optimization.md
00_university/02_CUDA/docs/study/solvers/: cuda.md  hybrid.md  index.md  mpi_nonblocking.md  sequential.md
00_university/02_CUDA/include/: grid.h  solver_cuda.cuh  solver_hybrid.cuh  solver_mpi.h  solver_omp.h  solver_seq.h
00_university/02_CUDA/scripts/: run_benchmarks.sh
00_university/02_CUDA/src/: grid.cc  main.cc  solver_cuda.cu  solver_hybrid.cu  solver_mpi.cc  solver_mpi_blocking.cc  solver_mpi_nonblocking.cc  solver_omp.cc  solver_seq.cc
00_university/distributed-kmeans-pipeline/docs/: design_justification.md
00_university/distributed-kmeans-pipeline/include/: io_utils.h
00_university/distributed-kmeans-pipeline/include/models/: centroids.h  column_stats.h
00_university/distributed-kmeans-pipeline/src/: stats.cpp
01_fundamentals/01_tour_of_cpp/: quotes.md  tips.md
01_fundamentals/01_tour_of_cpp/1_physics_engine/: constants.h  main.cpp  particle.h  simulation.cpp  simulation.h
01_fundamentals/01_tour_of_cpp/2_memory_manager/: main.cpp  matrix.cpp  matrix.h
01_fundamentals/01_tour_of_cpp/3_generic_solver/include/: linear_system.h
01_fundamentals/01_tour_of_cpp/4_log_forensics_analyzer/include/: log_analyzer.h  log_generator.h
01_fundamentals/01_tour_of_cpp/4_log_forensics_analyzer/include/models/: log_entry.h
01_fundamentals/01_tour_of_cpp/4_log_forensics_analyzer/src/: log_analyzer.cpp  log_generator.cpp  main.cpp
